catch-up docs to recent changes